--- a/src/app.html
+++ b/src/app.html
@@ -1,11 +1,12 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en" class="%sveltekit.theme%">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
-		%sveltekit.body%
+	<body data-sveltekit-preload-data="hover" class="bg-white text-zinc-900 dark:bg-zinc-900 dark:text-white transition-colors duration-300">
+		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
