--- a/src/app.html
+++ b/src/app.html
@@ -1,13 +1,16 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		%sveltekit.head%
-	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">
-			%sveltekit.body%
-		</div>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    %sveltekit.head%
+    
+    <!-- Link to the favicon -->
+    <link rel="icon" href="/favicon.png" type="image/png" />
+  </head>
+  <body data-sveltekit-preload-data="hover">
+    <div style="display: contents">
+      %sveltekit.body%
+    </div>
+  </body>
 </html>
